Reinstate on-screen keyboard

--- a/index.css
+++ b/index.css
@@ -67,6 +67,10 @@
     background-color: #cfa;
 }
 
+.scoreUnused {
+    background-color: #fff;
+}
+
 .score3 {
     background-color: #ddd;
     color: #aaa;
