--- a/index.css
+++ b/index.css
@@ -23,7 +23,7 @@
     text-align: center;
     border: 1px solid #aaa;
     padding: 0em;
-    margin: 0.5em;
+    margin: 0.2em;
 }
 
 .alphabet {
@@ -103,6 +103,7 @@ form {
     margin: auto;
     padding: 1em 0em;
     text-align: justify;
+    padding: 0em 0.5em
 }
 
 li {
