--- a/index.css
+++ b/index.css
@@ -108,4 +108,14 @@ form {
 
 li {
     margin: 0.5em 0em;
+    list-style-type: none;
+}
+
+ul li::before {
+    content: ">";
+    color: grey;
+    font-weight: bold;
+    display: inline-block;
+    width: 1em;
+    margin-left: -1em;
 }
