--- a/index.css
+++ b/index.css
@@ -5,27 +5,6 @@
     justify-items: center;
 }
 
-.guessResponseLetter {
-    width: 1.5em;
-    height: 1.5em;
-    line-height: 1.5em;
-    text-align: center;
-    border: 1px solid #aaa;
-    padding: 0em;
-    margin: 0.5em;
-}
-
-.alphabetLetter {
-    width: 1em;
-    height: 1em;
-    line-height: 1em;
-    font-size: small;
-    text-align: center;
-    border: 1px solid #aaa;
-    padding: 0em;
-    margin: 0.2em;
-}
-
 .alphabet {
     display: grid;
     justify-items: center;
@@ -86,27 +65,81 @@ form {
 }
 
 #copyButton {
-    width: 100%;
     margin: 1em 0em;
 }
 
-#inputButton {
-    width: 100%;
+form {
+    display: grid;
+}
+input {
+    margin-top: 1vw;
 }
 
-#inputText {
-    width: 100%;
+
+@media (max-width: 1000px) {
+    .centerBlock {
+        width: 100%;
+        padding: 3vw;
+        font-size: 3vw;
+    }
+
+    input {
+        border: 0.3vw solid #aaa;
+    }
+
+    .guessResponseLetter {
+        width: 1.5em;
+        height: 1.5em;
+        line-height: 1.5em;
+        text-align: center;
+        border: 0.3vw solid #aaa;
+        padding: 0em;
+        margin: 0.5em;
+    }
+
+    .alphabetLetter {
+        width: 6vw;
+        height: 6vw;
+        font-size: 6vw;
+        line-height: 5vw;
+        text-align: center;
+        border: 0.3vw solid #aaa;
+        padding: 0em;
+        margin: 0.5vw;
+    }
 }
 
-.centerBlock {
-    max-width: 30em;
-    margin: auto;
-    padding: 1em 0em;
-    text-align: justify;
-    padding: 0em 0.5em
+@media not (max-width: 1000px) {
+    .centerBlock {
+        max-width: 30em;
+        margin: auto;
+        padding: 1em 0em;
+        text-align: justify;
+        padding: 0em 0.5em
+    }
+
+    .guessResponseLetter {
+        width: 1.5em;
+        height: 1.5em;
+        line-height: 1.5em;
+        text-align: center;
+        border: 1px solid #aaa;
+        padding: 0em;
+        margin: 0.5em;
+    }
+
+    .alphabetLetter {
+        width: 2em;
+        height: 2em;
+        line-height: 2em;
+        text-align: center;
+        border: 1px solid #aaa;
+        padding: 0em;
+        margin: 0.5vw;
+    }
 }
 
 li {
-    margin: 0.5em 0em;
+    margin: 1em 0em;
     list-style-type: none;
 }
